# rust_chat

./: Cargo.toml
rust_chat/: Cargo.toml
rust_chat/src/: chat_result.rs  connection.rs  incoming_packet.rs  lib.rs  outgoing_packet.rs  packet.rs  packet_receiver.rs  packet_sender.rs  test_utils.rs
rust_chat_client/: Cargo.toml
rust_chat_client/src/: client.rs  lib.rs  main.rs
rust_chat_client/src/application/: mod.rs
rust_chat_client/src/command/: gather_login_data.rs  login_command.rs  mod.rs
rust_chat_server/: Cargo.toml
rust_chat_server/src/: lib.rs  main.rs
scripts/: run.py
