[package]
name = "rust_chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_chat = { path = "../rust_chat" }
egui = "*"
tracing-subscriber = "0.3"
eframe = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
